// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Admin Features test > finds an admin change admin changes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="p-4 border rounded-sm border-cardBorder"
        id="administrative_package_changes"
      >
        <h1
          class="text-3xl font-semibold mb-2"
          data-testid="undefined-title"
        >
          Administrative Package Changes (9)
        </h1>
        <hr
          class="my-6 bg-slate-200"
        />
        <div
          class="grid gap-y-8"
          data-testid="undefined-child"
        >
          <p
            class="text-sm"
          >
            Administrative changes reflect updates to specific data fields. If you have additional questions, please contact the assigned CPOC.
          </p>
          <div
            class="grid grid-cols-1 gap-y-2"
            data-orientation="vertical"
          >
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="open"
            >
              <h3
                data-orientation="vertical"
                data-state="open"
              >
                <button
                  aria-controls="radix-:r1:"
                  aria-expanded="true"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="open"
                  id="radix-:r0:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Package Added
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Sun, Jan 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r0:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="open"
                id="radix-:r1:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
              >
                <div
                  class="pb-4 pt-0"
                >
                  <div
                    class="col-span-full py-4 grid gap-y-6"
                  >
                    <div>
                      <h2
                        class="font-bold text-lg mb-2"
                      >
                        Change Made
                      </h2>
                      <p>
                        add file
                      </p>
                    </div>
                    <div>
                      <h2
                        class="font-bold text-lg mb-2"
                      >
                        Change Reason
                      </h2>
                      <p>
                        missing file
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r3:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r2:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Package Added
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Wed, Mar 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r2:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r3:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r5:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r4:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Manual Update
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Thu, Jun 1 2023, 09:00:00 AM EDT
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r4:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r5:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r7:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r6:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      -- --
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Fri, Sep 1 2023, 09:00:00 AM EDT
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r6:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r7:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r9:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r8:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Enable Formal RAI Response Withdraw
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Sat, Dec 31 2022, 07:00:00 PM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r8:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r9:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rb:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:ra:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Disable Formal RAI Response Withdraw
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Fri, Dec 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:ra:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:rb:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rd:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:rc:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Disable Formal RAI Response Withdraw
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Fri, Dec 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:rc:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:rd:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rf:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:re:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Enable Formal RAI Response Withdraw
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Fri, Dec 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:re:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:rf:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rh:"
                  aria-expanded="false"
                  class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:rg:"
                  type="button"
                >
                  <div
                    class="col-left-gutter text-left"
                  >
                    <strong>
                      Manual Update
                    </strong>
                  </div>
                  <div
                    class="col-gutter text-center"
                  >
                     - 
                  </div>
                  <div
                    class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                  >
                    <div
                      class="text-left"
                    >
                      Fri, Dec 1 2023, 09:00:00 AM EST
                    </div>
                    <svg
                      class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    <svg
                      class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                    </svg>
                  </div>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:rg:"
                class="text-sm transition-all px-3"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:rh:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
        </div>
      </section>
      ,
    </div>
  </body>,
  "container": <div>
    <section
      class="p-4 border rounded-sm border-cardBorder"
      id="administrative_package_changes"
    >
      <h1
        class="text-3xl font-semibold mb-2"
        data-testid="undefined-title"
      >
        Administrative Package Changes (9)
      </h1>
      <hr
        class="my-6 bg-slate-200"
      />
      <div
        class="grid gap-y-8"
        data-testid="undefined-child"
      >
        <p
          class="text-sm"
        >
          Administrative changes reflect updates to specific data fields. If you have additional questions, please contact the assigned CPOC.
        </p>
        <div
          class="grid grid-cols-1 gap-y-2"
          data-orientation="vertical"
        >
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="open"
          >
            <h3
              data-orientation="vertical"
              data-state="open"
            >
              <button
                aria-controls="radix-:r1:"
                aria-expanded="true"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="open"
                id="radix-:r0:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Package Added
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Sun, Jan 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r0:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="open"
              id="radix-:r1:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
            >
              <div
                class="pb-4 pt-0"
              >
                <div
                  class="col-span-full py-4 grid gap-y-6"
                >
                  <div>
                    <h2
                      class="font-bold text-lg mb-2"
                    >
                      Change Made
                    </h2>
                    <p>
                      add file
                    </p>
                  </div>
                  <div>
                    <h2
                      class="font-bold text-lg mb-2"
                    >
                      Change Reason
                    </h2>
                    <p>
                      missing file
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r3:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r2:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Package Added
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Wed, Mar 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r2:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r3:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r5:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r4:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Manual Update
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Thu, Jun 1 2023, 09:00:00 AM EDT
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r4:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r5:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r7:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r6:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    -- --
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Fri, Sep 1 2023, 09:00:00 AM EDT
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r6:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r7:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r9:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r8:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Enable Formal RAI Response Withdraw
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Sat, Dec 31 2022, 07:00:00 PM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r8:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r9:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rb:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:ra:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Disable Formal RAI Response Withdraw
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Fri, Dec 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:ra:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:rb:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rd:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:rc:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Disable Formal RAI Response Withdraw
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Fri, Dec 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:rc:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:rd:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rf:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:re:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Enable Formal RAI Response Withdraw
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Fri, Dec 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:re:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:rf:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rh:"
                aria-expanded="false"
                class="w-full two-cols-gutter items-center py-4 font-medium transition-all hover:underline group bg-gray-100 px-3 text-gray-600"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:rg:"
                type="button"
              >
                <div
                  class="col-left-gutter text-left"
                >
                  <strong>
                    Manual Update
                  </strong>
                </div>
                <div
                  class="col-gutter text-center"
                >
                   - 
                </div>
                <div
                  class="col-right-gutter grid grid-cols-[1fr_1rem] gap-x-4 items-center"
                >
                  <div
                    class="text-left"
                  >
                    Fri, Dec 1 2023, 09:00:00 AM EST
                  </div>
                  <svg
                    class="lucide lucide-plus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=open]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                    <path
                      d="M12 5v14"
                    />
                  </svg>
                  <svg
                    class="lucide lucide-minus h-4 w-4 shrink-0 transition-transform duration-200 group-data-[state=closed]:hidden"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 12h14"
                    />
                  </svg>
                </div>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:rg:"
              class="text-sm transition-all px-3"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:rh:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
    </section>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Admin Features test > finds no admin changes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      ,
    </div>
  </body>,
  "container": <div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
